--- a/workflow/requirements.txt
+++ b/workflow/requirements.txt
@@ -1,2 +1,4 @@
-torch==2.3.1 torchvision==0.18.1 torchaudio==2.3.1 --index-url https://download.pytorch.org/whl/cu121
+torch==2.3.1 --index-url https://download.pytorch.org/whl/cu121
+torchvision==0.18.1 --index-url https://download.pytorch.org/whl/cu121
+ orchaudio==2.3.1 --index-url https://download.pytorch.org/whl/cu121
 -U demucs
