--- a/workflow/requirements.txt
+++ b/workflow/requirements.txt
@@ -2,4 +2,7 @@ torch==2.3.1 --index-url https://download.pytorch.org/whl/cu121
 torchvision==0.18.1 --index-url https://download.pytorch.org/whl/cu121
 torchaudio==2.3.1 --index-url https://download.pytorch.org/whl/cu121
 demucs
-pytube
+pytubefix
+numpy
+pydub
+basic-pitch
